--- a/index.html
+++ b/index.html
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel = "stylesheet" href = "my_screen.css"/>
-<title>My Screen</title>
+    <link rel="stylesheet" href="my_screen.css" />
+    <title>My Screen</title>
 
 </head>
+
 <body>
-  <div class = "navBar">
-    <ul>
-      <li>
-        <input type = "button" id = "modalActive" value = "add data here"/>
-      </li>
-    </ul>
-  <div class = "modal">
-    <div class = "title">
-      <h1>Dyllon's Fittness app</h2>
+    <div class="navBar">
+        <ul>
+            <li>
+                <input type="button" id="modalActive" value="add data here" />
+            </li>
+        </ul>
+        <div class="modal">
+            <div class="title">
+                <h1>Dyllon's Hotels!</h2>
+        <hr>
+        <div id = "">
+
+          <h2>select your check_in and checkout_out date as well as option room</h2>
+          <table id ="checkList" border='1px'>
+              <tr>
+              <td>check in date</td>
+              <td><input type="date" id="selectCheckInDate" onchange="FirstDateInput()"></td>
+              <td>check out date</td>
+              <td><input type="date" id="selectCheckOutDate" onchange="SecondDateInput()"></td>
+              <td>double room/single/family/multiple</td>
+             </tr>
+            </table>
+          </div>
       </div>
     </div>
-    <h3>Top Four fittness processes </h3>
+
+    <h3>Top Four Hotels That Would Amaze You!!</h3>
     <div class = "imagesPopping">
-      <img src = ""/>
-      <img src = ""/>
-      <img src = ""/>
-      <img src = ""/>
+      <table border="5px">
+        <tr>
+      <td><img src = "https://imgec.trivago.com/partnerimages/11/07/110730130_x.jpeg"width="250px" height="150px"/>
+<tr>
+<th>price</th>
+<td>R1500</td>
+</tr>
+<tr>
+<th>location</th>
+<td>Twelve Apostles</<td>
+</tr>
+      </tr>
+      <tr>
+    <td>  <img src = "https://imgec.trivago.com/partnerimages/11/07/110730134_x.jpeg"width="250px" height="150px"/></td>
+    <tr>
+      <th>price</th>
+        <td>1700</td>
+      </tr>
+      <tr>
+        <th>location</th>
+        <td>Cape Grace</td>
+      </tr>
+      <tr>
+      <td><img src = "https://imgec.trivago.com/partnerimages/11/07/110730142_x.jpeg"width="250px" height="150px"/></td>
+      <tr>
+        <th>price</th>
+        <td>2225</td>
+      </tr>
+      <th>location</th>
+      <td>Belmond Mount Nelson Hotel</td>
+      <img src = "https://imgec.trivago.com/partnerimages/11/07/110730150_x.jpeg"/>
+    </table>
     </div>
-    <h3>Search For Fittness Tips</h3>
+  </div>
+    <hr>
+    <!-- <h3></h3>
     <div id = "searchBox">
       <div class = "searchForm">
       <table id = "#search">
@@ -132,9 +179,9 @@
         </select>
 <hr>
       <!-- <h5 class = "close">X</h5> -->
-      <input type = "button" id = "successBTN" value = "Fantastic!!"/>
-    </div>
-  </div>
+      <!-- <input type = "button" id = "successBTN" value = "Fantastic!!"/> -->
+    <!-- </div> -->
+  <!-- </div> -->
 
 <script src = "handlebars-v4.0.5.js" charset = "utf-8"></script>
 <script src = "my_screen.js" charset = "utf-8"></script>
