--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
       </tr>
       <th>location</th>
       <td>Belmond Mount Nelson Hotel</td>
-      <img src = "https://imgec.trivago.com/partnerimages/11/07/110730150_x.jpeg"/>
+    </tr>
+
+    <td>  <img src = "https://imgec.trivago.com/partnerimages/11/07/110730150_x.jpeg"width="150px" height="150"/></td>
+    <tr>
+      <th>price</th>
+      <td>3000</td>
+      <tr>
+        <th>locaton</th>
+        <td>One & Only Cape Town</td>
+      </tr>
     </table>
     </div>
   </div>
