fixed errors and updated logic

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h3>FootBall Today</h3>
     <p>hello and wellcome to football today!!</p>
     <hr>
-    
+
     <div class='container'>
         <div class='add'>
             <h2>add team:</h2>
@@ -85,6 +85,7 @@
                 <input type='text' name='points' class='points'>
             </div>
             <div class='button'>
+
                 <input type='button' value='Add' id='addBtn'>
                 <hr>
             </div>
@@ -115,7 +116,7 @@
 
 
     <script id='some-template' type='text/x-handlebars-template'>
-        <table>
+        <table id='myTable'>
             <thead>
                 <th>Team</th>
                 <th>Position</th>
